objects/DMAPP__DM_TAS_Criterion_Competitor_Answer__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing answers to the Assessment module specific to a given opportunity competitor.</description>
    <fields>
        <fullName>DMAPP__Answer__c</fullName>
        <label>Answer</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Opportunity_Competitor_Extra__c</fullName>
        <label>DM Opportunity Competitor Extra</label>
        <referenceTo>DMAPP__DM_Opportunity_Competitor_Extra__c</referenceTo>
        <relationshipName>DM_TAS_Criterion_Competitor_Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_TAS_Criterion_Answer__c</fullName>
        <label>DM TAS Criterion Answer</label>
        <referenceTo>DMAPP__DM_TAS_Criterion_Answer__c</referenceTo>
        <relationshipName>DM_TAS_Criterion_Competitor_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Score__c</fullName>
        <formula>IF(ISPICKVAL(DMAPP__Answer__c, &apos;Yes&apos;),
      DMAPP__DM_TAS_Criterion_Answer__r.DMAPP__DM_TAS_Criterion__r.DMAPP__Yes_Score__c,
      IF(ISPICKVAL(DMAPP__Answer__c, &apos;No&apos;),
      DMAPP__DM_TAS_Criterion_Answer__r.DMAPP__DM_TAS_Criterion__r.DMAPP__No_Score__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Assessment Criterion Competitor Answer</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Assessment Criterion Competitor Answer N</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assessment Criterion Competitor Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>